# gpui-mobile

./: Cargo.toml  LICENSE  LICENSE-APACHE  README.md
example/: README.md
example/android/gradle/: build.gradle.kts
example/android/gradle/app/src/main/java/dev/gpui/mobile/: GpuiActivity.java  GpuiTextInputView.java
example/src/screens/: about.rs
src/: lib.rs
src/android/: jni.rs  mod.rs  platform.rs  text_input.rs  window.rs
src/ios/: ffi.rs  window.rs
