[package]
name = "gpui-mobile"
version = "0.1.0"
edition = "2021"
authors = ["Balamurali Pandranki <balamurali@live.com>", "Minion"]
license = "Apache-2.0"
description = "Mobile platform support for GPUI — iOS (wpgu/Metal) and Android (wgpu/Vulkan)"
repository = "https://github.com/vmg-dev/gpui-mobile"
homepage = "https://github.com/vmg-dev/gpui-mobile"
keywords = ["gui", "mobile", "ios", "android", "gpui"]
categories = ["gui", "os"]
readme = "README.md"
publish = false

[features]
default = ["url_launcher", "shared_preferences", "path_provider",
           "package_info", "device_info", "connectivity", "network_info", "vibration",
           "battery", "share", "sensors", "webview", "file_selector", "image_picker", "camera",
           "permission_handler", "notifications", "location", "audio", "video_player",
           "clipboard", "local_auth", "in_app_review", "contacts", "maps_launcher",
           "calendar", "deeplink", "microphone", "maps", "media_session"]
url_launcher = []
shared_preferences = []
path_provider = []
package_info = []
device_info = []
connectivity = []
network_info = []
vibration = []
battery = []
share = []
sensors = []
webview = []
file_selector = []
image_picker = []
camera = []
permission_handler = []
notifications = []
location = []
audio = []
video_player = []
clipboard = []
local_auth = []
in_app_review = []
contacts = []
maps_launcher = []
maps = []
calendar = []
deeplink = []
microphone = []
media_session = []

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

# ── shared deps (all platforms) ──────────────────────────────────────────────

[dependencies]
anyhow       = "1"
log          = { version = "0.4", features = ["kv_unstable_serde", "serde"] }
parking_lot  = "0.12"
futures      = "0.3"
raw-window-handle = "0.6"

# ── GPUI core crate (provides Platform trait, event types, geometry, etc.) ───
gpui = { package = "gpui-ce", git = "https://github.com/vmg-dev/gpui-ce", rev = "4094809dba8bd86e1507aef749d95caf3f8a16de", default-features = false }

# ── iOS ──────────────────────────────────────────────────────────────────────

[target.'cfg(target_os = "ios")'.dependencies]
# Objective-C runtime
objc2 = "0.6"

# Apple frameworks
core-foundation     = "0.10"
core-foundation-sys = "0.8"
core-graphics       = "0.24"
core-text           = "=21.0.0"
uuid                = { version = "1", features = ["v4", "v5"] }
block2              = "0.6"

# Text / font stack
pathfinder_geometry = "0.5"
pathfinder_simd = { version = "0.5", features = ["pf-no-simd"] }
smallvec            = { version = "1.6", features = ["union", "const_new"] }

# font-kit (same pin as gpui upstream)
font-kit = { git = "https://github.com/zed-industries/font-kit", rev = "94b0f28166665e8fd2f53ff6d268a14955c82269", package = "zed-font-kit", version = "0.14.1-zed" }

# ── Android ──────────────────────────────────────────────────────────────────

[target.'cfg(target_os = "android")'.dependencies]
# JNI / NDK bindings
jni         = "0.22"
libc        = "0.2"
# Keep `ndk` on the baseline `nativewindow` feature set. Enabling
# `api-level-31` links API 31 symbols directly, so the shared library
# fails to `dlopen` on older Android versions before our own code runs.
ndk         = { version = "0.9", features = ["nativewindow"] }
ndk-context = "0.1"
ndk-sys     = "0.6"

# Activity glue layer
android-activity = { version = "0.6", features = ["native-activity"] }

# Logging to logcat
android_logger = "0.15"

# rustc-hash is required by the PlatformKeyboardMapper trait signature
rustc-hash = "2"
uuid       = { version = "1", features = ["v5"] }

# ── dev ──────────────────────────────────────────────────────────────────────

[dev-dependencies]

# ── patch: match GPUI's pinned forks ─────────────────────────────────────────

[patch.crates-io]
async-task = { git = "https://github.com/smol-rs/async-task.git", rev = "b4486cd71e4e94fbda54ce6302444de14f4d190e" }

# ── profiles ─────────────────────────────────────────────────────────────────

[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 1
strip         = true

[profile.dev]
opt-level = 0
debug     = true
